--- a/amazing/app/index.html
+++ b/amazing/app/index.html
@@ -20,13 +20,12 @@
         <div  class="button button-about">About</div>
         <div class="button button-credits">Credits</div>
       </section>
-
       <section class="screen screen-leaderboard">
         <!-- partial:index.partial.html -->
         <div class="leaderboard">
           <h2>Amazeng <small>( Token Collectors Leaderboard )</small></h2>
           <ol id="list"></ol>
-          <p><small>Amazeng Token Collectors</small></p>
+          <p><small>P Token Collectors</small></p>
         </div>
         <!-- partial -->
         <a href="#" class="button button-game-menu blackText">Back to Menu</a>
@@ -39,10 +38,10 @@
         You have a limited amount of time to complete a level maze so the coins you collect also add time to your exisiting level time which is carried over throughout all levels
 
         </p>
-         <h1>Binance Smart Chain</h1>
-        To play the game you will need to ensure that you have setup metamask accordingly as stipulated on the <a href="https://binancex.dev/blog.html?p=making-the-move-from-ethereum-to-bsc">Binance Website</a>
-        You will also need some test net eth to get the Amazeng tokens streamed to your account testnet eth for the Binance smartchain network is available here <a href="https://testnet.binance.org/faucet-smart">testnet faucet</a> 
-      </br><b>Ensure that you select the *Give me BNB option* </b>
+         <h1>Goerli Test Network</h1>
+        To play the game you will need to ensure that you have setup metamask accordingly as stipulated on the <a href="https://docs.matic.network/docs/develop/network-details/network">Polygon Website</a>
+        You will also need some test net eth to get the PTokens tokens streamed to your account testnet eth for the Goerli Test network is available here <a href="https://faucet.matic.network/">testnet faucet</a> 
+      </br><b>Ensure that you select the *Give the Goerli Eth option* </b>
       </br>
       </br>
         <a href="#" class="button button-game-menu blackText">Back to Menu</a>
